# j_connect_backend

./: pyproject.toml  requirements.txt
docker/: example.Dockerfile
src/: consts.py  mqtt_backend.py  tcp_soc.py  web_soc.py
src/image_processing/: load_images.py  process.py
